--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
     "nodemon": "^2.0.22",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
